--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "jquery": "^3.1.1",
         "jquery-slimscroll": "^1.3.8",
         "jquery-ui": "^1.12.1",
+        "vue-pagination-2": "^1.6.1",
         "vuex": "^2.2.1"
     },
     "devDependencies": {
