--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "dependencies": {
-        "vue-router": "^3.0.1",
         "admin-lte": "^2.3.11",
         "axios": "^0.15.3",
         "bootstrap": "^3.3.7",
@@ -21,7 +20,9 @@
         "jquery": "^3.1.1",
         "jquery-slimscroll": "^1.3.8",
         "jquery-ui": "^1.12.1",
+        "mapbox-gl": "^0.44.2",
         "vue-pagination-2": "^1.6.1",
+        "vue-router": "^3.0.1",
         "vuex": "^2.2.1"
     },
     "devDependencies": {
