--- a/.env.example
+++ b/.env.example
@@ -39,3 +39,5 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 JWT_SECRET=super_secrete_token
+
+MAPBOX_KEY=some_key_string
