--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "dependencies": {
+        "@mapbox/geojson-extent": "^0.3.2",
         "admin-lte": "^2.3.11",
         "axios": "^0.15.3",
         "bootstrap": "^3.3.7",
