added alertifyjs. Notify if no addresses have been found #19

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@mapbox/geojson-extent": "^0.3.2",
         "admin-lte": "^2.3.11",
+        "alertifyjs": "^1.11.1",
         "axios": "^0.15.3",
         "bootstrap": "^3.3.7",
         "bootstrap3-wysihtml5-bower": "^0.3.3",
