--- a/package.json
+++ b/package.json
@@ -28,29 +28,26 @@
         "vuex": "^2.2.1"
     },
     "devDependencies": {
-        "axios": "^0.18",
-        "bootstrap": "^4.0.0",
-        "cross-env": "^5.1",
-        "jquery": "^3.2",
-        "laravel-mix": "^2.0",
-        "lodash": "^4.17.4",
-        "popper.js": "^1.12",
-        "vue": "^2.5.7",
         "autoprefixer": "^6.7.2",
+        "axios": "^0.18",
         "axios-mock-adapter": "^1.7.1",
         "babel-core": "^6.22.1",
         "babel-eslint": "^7.1.1",
+        "babel-loader": "^7.1.1",
         "babel-plugin-istanbul": "^3.1.2",
         "babel-plugin-transform-runtime": "^6.22.0",
         "babel-polyfill": "^6.23.0",
         "babel-preset-es2015": "^6.22.0",
         "babel-preset-stage-2": "^6.22.0",
         "babel-register": "^6.22.0",
+        "bootstrap": "^4.0.0",
         "chai": "^3.5.0",
         "chalk": "^1.1.3",
         "chromedriver": "^2.27.2",
         "connect-history-api-fallback": "^1.3.0",
+        "cross-env": "^5.1",
         "cross-spawn": "^5.0.1",
+        "css-loader": "^0.28.4",
         "eslint": "^3.14.1",
         "eslint-config-standard": "^6.2.1",
         "eslint-friendly-formatter": "^2.0.7",
@@ -62,11 +59,13 @@
         "express": "^4.14.1",
         "extract-text-webpack-plugin": "^2.0.0-rc.2",
         "faker": "^4.1.0",
+        "file-loader": "^0.11.2",
         "friendly-errors-webpack-plugin": "^1.1.3",
         "function-bind": "^1.1.0",
         "html-webpack-plugin": "^2.28.0",
         "http-proxy-middleware": "^0.17.3",
         "inject-loader": "^2.0.1",
+        "jquery": "^3.2",
         "json-server": "^0.9.5",
         "karma": "^1.4.1",
         "karma-coverage": "^1.1.1",
@@ -76,6 +75,8 @@
         "karma-sourcemap-loader": "^0.3.7",
         "karma-spec-reporter": "0.0.26",
         "karma-webpack": "^2.0.2",
+        "laravel-mix": "^2.0",
+        "lodash": "^4.17.5",
         "lolex": "^1.5.2",
         "mocha": "^3.2.0",
         "nightwatch": "^0.9.12",
@@ -83,24 +84,23 @@
         "opn": "^4.0.2",
         "ora": "^1.1.0",
         "phantomjs-prebuilt": "^2.1.14",
+        "popper.js": "^1.12",
+        "postcss-loader": "^2.0.6",
         "selenium-server": "^3.0.1",
         "semver": "^5.3.0",
         "shelljs": "^0.7.6",
         "sinon": "^1.17.7",
         "sinon-chai": "^2.8.0",
+        "style-loader": "^0.18.2",
         "url-loader": "^0.5.7",
+        "vue": "^2.5.7",
+        "vue-loader": "^13.0.1",
         "vue-style-loader": "^2.0.0",
         "vue-template-compiler": "^2.1.10",
+        "webpack": "^3.2.0",
         "webpack-bundle-analyzer": "^2.2.1",
         "webpack-dev-middleware": "^1.10.0",
         "webpack-hot-middleware": "^2.16.1",
-        "webpack-merge": "^2.6.1",
-        "babel-loader": "^7.1.1",
-        "css-loader": "^0.28.4",
-        "file-loader": "^0.11.2",
-        "postcss-loader": "^2.0.6",
-        "style-loader": "^0.18.2",
-        "vue-loader": "^13.0.1",
-        "webpack": "^3.2.0"
+        "webpack-merge": "^2.6.1"
     }
 }
