--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "admin-lte": "^2.3.11",
         "alertifyjs": "^1.11.1",
         "axios": "^0.15.3",
+        "bluebird": "^3.5.1",
         "bootstrap": "^3.3.7",
         "bootstrap3-wysihtml5-bower": "^0.3.3",
         "chart.js": "^2.5.0",
