--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -2,5 +2,6 @@
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
     "/js/vendor.js": "/js/vendor.js",
-    "/js/graph.js": "/js/graph.js"
+    "/js/graph.js": "/js/graph.js",
+    "/js/graph-1.js": "/js/graph-1.js"
 }
