--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
         "mapbox-gl": "^0.44.2",
         "vue-pagination-2": "^1.6.1",
         "vue-router": "^3.0.1",
-        "vuex": "^2.2.1"
+        "vuex": "^2.2.1",
+        "vue-select": "^2.4.0"
     },
     "devDependencies": {
         "autoprefixer": "^6.7.2",
